--- a/Conocenos.html
+++ b/Conocenos.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title> "Mario´s Family"</title>
+  <title> "Pizzas_Mario"</title>
   <link rel="stylesheet" href="selection.css"> <!-- Link para el diseño del menu-->
   <link rel="stylesheet" href="button.css"> <!-- Link para el diseño de boton-->
   <style>
